--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -421,6 +421,124 @@ a.letterbuttons {
     margin-top: -10px;
   }
 }
+.p-card {
+  position: relative;
+  width: 100%;
+  background-color: #1b262c;
+  z-index: 5;
+  outline: 0;
+  border-radius: 0;
+}
+.p-card img {
+  width: 100%;
+  object-fit: cover;
+  filter: grayscale(0.7) saturate(0.1);
+  height: 15rem;
+}
+.p-card .p-card-heading {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: calc(50% - 2rem);
+  left: 25%;
+  width: 50%;
+  height: 4rem;
+  background-color: #3282b8;
+  color: white;
+  transform: rotate(3deg);
+  transition: transform 0.25s;
+  z-index: 13;
+}
+.p-card .p-card-heading h3 {
+  align-self: center;
+  font-size: 1rem;
+  text-align: center;
+}
+.p-card .p-card-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3282b8;
+  color: white;
+  position: absolute;
+  width: 50%;
+  height: 5rem;
+  top: 18rem;
+  left: 25%;
+  z-index: 5;
+}
+.p-card .p-card-links a {
+  color: white;
+  font-size: 1.5rem;
+  padding: 0rem 1rem;
+}
+.p-card .p-card-text {
+  background-color: #1b262c;
+  position: relative;
+  width: 100%;
+  padding: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  z-index: 12;
+  border-top: 2px solid #1b262c;
+  transition: all 0.3s;
+}
+.p-card .p-card-text p {
+  font-size: 1rem;
+  color: #bbe1fa;
+  line-height: 1.5rem;
+}
+.p-card .p-card-text .p-card-text-used {
+  margin-top: 1rem;
+  text-align: center;
+  color: #bbe1fa;
+  font-size: 2rem;
+}
+.p-card:hover img {
+  filter: grayscale(0);
+  transition: filter 0.3s;
+}
+.p-card:hover .p-card-heading {
+  transform-origin: center;
+  transform: translateY(-5rem);
+  transition: transform 0.3s;
+}
+.p-card:hover .p-card-text {
+  border-top: 2px solid #0f4c75;
+  transition: all 0.6s;
+}
+.p-card:hover .p-card-links {
+  transform: translateY(-5rem) rotate(3deg);
+  transition: transform 0.6s;
+}
+.p-card:hover .p-card-links a {
+  transform: rotate(-3deg);
+}
+.p-card:hover .p-card-links a:hover {
+  color: #bbe1fa;
+  transition: all 0.3s;
+}
+
+@media (max-width: 768px) {
+  .p-card .p-card-heading {
+    width: 60%;
+    top: 0;
+    left: 40%;
+  }
+  .p-card .p-card-links {
+    z-index: 20;
+    width: 30%;
+    height: 3rem;
+    left: 0;
+    top: 13rem;
+  }
+  .p-card:hover .p-card-heading {
+    transform: none;
+  }
+  .p-card:hover .p-card-links {
+    transition: none;
+  }
+}
 /* Box sizing rules */
 *,
 *::before,
@@ -514,29 +632,44 @@ section .section-heading {
   text-align: center;
   color: #1b262c;
   display: inline;
+  max-width: 25%;
+  margin: 0 auto;
+  margin-bottom: 5rem;
+  transform: rotate(3deg);
 }
 section .section-heading:after {
   position: absolute;
   content: "";
   top: 0;
-  left: 50%;
+  left: 0;
   height: 100%;
-  width: 30%;
+  width: 100%;
   padding: 2rem 2rem;
   background-color: #3282b8;
   z-index: -1;
   transform-origin: center;
-  transform: rotate(3deg) translateY(-0.5rem);
+  transform: translateY(-0.5rem);
 }
 
+.space-around {
+  display: flex;
+  justify-content: space-around;
+}
+
+@media (max-width: 992px) {
+  h1.section-heading {
+    max-width: 50%;
+  }
+}
 @media (max-width: 768px) {
   .container {
-    width: 90vw;
+    width: 96vw;
   }
   nav {
     position: fixed;
     padding: 0.8125rem 0;
     background-color: rgba(15, 76, 117, 0.75);
+    z-index: 1001;
     bottom: 4rem;
     left: 0;
     font-size: 0.75rem;
@@ -555,6 +688,15 @@ section .section-heading:after {
   }
   .logo {
     margin: 0 auto;
+  }
+  h1.section-heading {
+    max-width: 66%;
+    font-size: 1.6rem;
+    padding: 0.5rem 0.75rem;
+  }
+  header,
+section {
+    min-height: 100vh;
   }
 }
 
