--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @use "typo" as ty;
 @use "nav";
 @use "sidebar";
+@use "work";
 @import "reset";
 
 $spacer: 2rem;
@@ -26,31 +27,48 @@ section {
     text-align: center;
     color: v.$color-bg;
     display: inline;
+    max-width: 25%;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+    transform: rotate(3deg);
     &:after {
       position: absolute;
       content: "";
       top: 0;
-      left: 50%;
+      left: 0;
       height: 100%;
-      width: 30%;
+      width: 100%;
       padding: 2rem 2rem;
       background-color: v.$color-high;
       z-index: -1;
       transform-origin: center;
-      transform: rotate(3deg) translateY(-0.5rem);
+      transform: translateY(-0.5rem);
     }
   }
 }
 
+// UTILITY CLASSES
+.space-around {
+  display: flex;
+  justify-content: space-around;
+}
+
 // RESPONSIVE DESIGN
+
+@media (max-width: 992px) {
+  h1.section-heading {
+    max-width: 50%;
+  }
+}
 @media (max-width: 768px) {
   .container {
-    width: 90vw;
+    width: 96vw;
   }
   nav {
     position: fixed;
     padding: 0.8125rem 0;
     background-color: rgba(v.$color-low, 0.75);
+    z-index: 1001;
 
     bottom: 4rem;
     left: 0;
@@ -71,5 +89,15 @@ section {
 
   .logo {
     margin: 0 auto;
+  }
+  h1.section-heading {
+    max-width: 66%;
+    font-size: 1.6rem;
+    padding: 0.5rem 0.75rem;
+  }
+
+  header,
+  section {
+    min-height: 100vh;
   }
 }
